[package]
name = "zende"
version = "0.1.6" # remember to update html_root_url
authors = ["Sean C. Roach <me@seancroach.dev>"]
license = "MIT"
description = "A zigzag encoding/decoding library"
repository = "https://github.com/seancroach/zende"
keywords = ["zigzag"]
categories = ["encoding"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE.md"]
edition = "2018"

[dev-dependencies]
version-sync = "0.9"
